test/translator/success/class.prez
class Vehicle {
  public int seats;

  public Vehicle(int seats) {
    this.seats = seats;
    this.wheels = 4;
  }

  public int getSeats() {
    return this.seats;
  }

  public void setSeats(int seats) {
    this.seats = seats;
  }

  public int wheels;

  public Vehicle(int seats, int wheels) {
    this.seats = seats;
    this.wheels = wheels;
  }

  public int getWheels() {
    return this.wheels;
  }

  public void setWheels(int wheels) {
    this.wheels = wheels;
  }
}



void main() {
  Vehicle car = Vehicle(5);
  print(car.seats);
  print(car.getSeats());
  print(car.wheels);
  print(car.getWheels());

  Vehicle bike = Vehicle(1,2);
  print(bike.seats);
  print(bike.getSeats());
  print(bike.wheels);
  print(bike.getWheels());

  car.setSeats(3);
  car.setWheels(18);
  print(car.getSeats());
  print(car.wheels);
}
